WebCore: [Qt] Added pure virtual QWebPageClient::pluginParent()

Patch by J-P Nurmi <jpnurmi@gmail.com> on 2009-10-05
Reviewed by Simon Hausmann.

https://bugs.webkit.org/show_bug.cgi?id=29710

* platform/qt/QWebPageClient.h:

WebKit/qt: Added QGraphicsWidget-plugins support to FrameLoaderClientQt.

Patch by J-P Nurmi <jpnurmi@gmail.com> on 2009-10-05
Reviewed by Simon Hausmann.

https://bugs.webkit.org/show_bug.cgi?id=29710

* Api/qgraphicswebview.cpp:
(QGraphicsWebViewPrivate::pluginParent):
* Api/qwebview.cpp:
(QWebViewPrivate::pluginParent):
* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::):
(WebCore::FrameLoaderClientQt::createPlugin):

Canonical link: https://commits.webkit.org/40651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49092 268f45cc-cd09-0410-ab3c-d52691b4dbfc