WebKit/qt/Api/qgraphicswebview.cpp
@@ -53,6 +53,8 @@ public:
     virtual int screenNumber() const;
     virtual WId winId() const;
 
+    virtual QObject* pluginParent() const;
+
     void _q_doLoadProgress(int progress);
     void _q_doLoadFinished(bool success);
     void _q_setStatusBarMessage(const QString& message);
@@ -129,6 +131,11 @@ WId QGraphicsWebViewPrivate::winId() const
         return views.at(0)->winId();
 
     return 0;
+}
+
+QObject* QGraphicsWebViewPrivate::pluginParent() const
+{
+    return q;
 }
 
 void QGraphicsWebViewPrivate::_q_setStatusBarMessage(const QString& s)
